// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogList /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly authenticated with blogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Add a new blog"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/create-blog"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              />
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Add a new blog
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card blogs-list__card--with-controls"
        href="/blog/asdfg"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-ciZhAO iEojGv blogs-list__control"
        type="button"
      >
        <span
          class="sc-bZnhIo jfVzHO"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card blogs-list__card--with-controls"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-ciZhAO iEojGv blogs-list__control"
        type="button"
      >
        <span
          class="sc-bZnhIo jfVzHO"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card blogs-list__card--with-controls"
        href="/blog/mndyd8"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-ciZhAO bKwhIT blogs-list__control"
        disabled=""
        type="button"
      >
        <span
          class="sc-bZnhIo jfVzHO"
        >
          Delete blog
        </span>
      </button>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blog load error 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl hldXbV"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/asdfg"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/mndyd8"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with ssrBlogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/asdfg"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-fnykZs CtZja sc-ivTmOn vzOKO blogs-list__card"
        href="/blog/mndyd8"
      >
        <div
          class="sc-fEOsli dbexNH"
        >
          <div
            class="sc-bjUoiL cgnUQC"
          />
          <div
            class="sc-idiyUo djdTzJ"
          >
            <div
              aria-hidden="true"
              class="sc-cxabCf jvTxRV"
            >
              <div
                class="sc-llJcti jYyfSA date container"
              >
                <div
                  class="sc-ezWOiH jyhjRz"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-bZkfAO kUMOLc"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-iIPllB vJBVT"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-ikZpkk emCGeg"
                >
                  <div
                    class="sc-jIZahH"
                  >
                    <span
                      class="sc-himrzO hmSwAS"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-gicCDI hxfzFs"
              >
                <div
                  class="sc-dIouRR fjzaQy"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-hHLeRK SCzIT"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-dmRaPn cMEjyt"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-kgflAQ kjsNnS"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-fLlhyt jswrEZ gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-bBrHrO cuRlSD gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commons__inner"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
